# asquire-filip

./: README.md  settings.gradle
asquire/: build.gradle  google-services.json
asquire/release/: asquire-release.apk  output-metadata.json
asquire/src/androidTest/java/aashi/fiaxco/asquirefilip0x08/: ExampleInstrumentedTest.java
asquire/src/main/: AndroidManifest.xml
asquire/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp
asquire/src/main/cpp/asqengine/: AsqPlyEngine.cpp  AsqPlyEngine.h  AsqRecEngine.cpp  AsqRecEngine.h
asquire/src/main/cpp/prediction/: ComputeMfcc.cpp  ComputeMfcc.h  Prediction.cpp  Prediction.h  svm-predict.cpp
asquire/src/main/java/aashi/fiaxco/asquirefilip0x08/: RecordActivity.java  SurveyActivity.java  UserIDActivity.java
asquire/src/main/java/aashi/fiaxco/asquirefilip0x08/audioengine/: AsqEngine.java  AsqViewModel.java  AudioService.java  UploadService.java
asquire/src/main/java/aashi/fiaxco/asquirefilip0x08/stuff/: Stimulus.java  SurveyWebView.java  Timer.java
asquire/src/main/java/aashi/fiaxco/asquirefilip0x08/webview/: SurveyWebView.java
asquire/src/main/res/drawable/: ic_baseline_error_outline_24.xml
asquire/src/main/res/layout/: activity_main.xml  activity_record.xml  activity_survey.xml
asquire/src/main/res/values/: colors.xml  strings.xml  themes.xml
asquire/src/main/res/values-night/: themes.xml
asquire/src/test/java/aashi/fiaxco/asquirefilip0x08/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
